--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="style/bootstrap.min.css">
+	<link rel="stylesheet" href="style/main.css">
+	
 	
 </head>
 <body>
-	<div id="root"></div>
+	<div id="root" class="container"></div>
 </body>
 <script src="dist/bundle.js"></script>
 </html>
